--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -18,3 +18,19 @@ litters_df = janitor::clean_names(litters_df)
 ```
 
 ## Take a look at the data
+
+printing in the console
+
+```{r}
+litters_df 
+```
+
+```{r}
+head(litters_df)
+tail(litters_df)
+```
+
+```{r}
+skimr::skim(litters_df)
+```
+
