other file formats-xlsx, sas

--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -5,6 +5,8 @@ output: github_document
 
 ```{r setup}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 ## read in some data
@@ -32,5 +34,38 @@ tail(litters_df)
 
 ```{r}
 skimr::skim(litters_df)
+```
+
+
+
+
+## Options to read csv
+```{r}
+litters_df = read_csv('./data/FAS_litters.csv', skip = 10, col_names = FALSE)
+litters_df = read_csv('./data/FAS_litters.csv', na = c('', 'NA', ',', 999))
+```
+
+
+Check out '?read_csv()' for more information
+
+
+
+## Other file formats
+
+Read in an excel file.
+
+```{r}
+mlb_df = read_excel('./data/mlb11.xlsx', range = 'A1:F7')
+mlb_df
+```
+
+could use view(mlb_df) ?read_excel
+
+
+
+Read in a SAS file.
+```{r}
+pulse_df = read_sas('./data/public_pulse_data.sas7bdat')
+pulse_df
 ```
 
