read.csv vs read_csv (use read_csv)

--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -69,3 +69,14 @@ pulse_df = read_sas('./data/public_pulse_data.sas7bdat')
 pulse_df
 ```
 
+
+
+## Comparison with Base R
+
+what about 'read.csv'---nuver use
+
+```{r}
+litters_base = read.csv('data/FAS_litters.csv')
+litters_readr = read_csv('data/FAS_litters.csv')   # read this
+```
+
