--- a/data_import.Rmd
+++ b/data_import.Rmd
@@ -80,3 +80,13 @@ litters_base = read.csv('data/FAS_litters.csv')
 litters_readr = read_csv('data/FAS_litters.csv')   # read this
 ```
 
+
+
+## Export data
+
+Export the mlb sub-table
+
+```{r}
+write_csv(mlb_df,'./data/mlb_subtable.csv')
+```
+
