--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -61,5 +61,31 @@ relocate(litters_df, litter_number)  #same as before
 
 
 
+## 'filter'
 
+```{r}
+filter(litters_df, gd0_weight >= 22)
+```
+
+```{r}
+filter(litters_df, gd_of_birth == 20)
+```
+
+```{r}
+filter(litters_df, !(gd_of_birth ==20))
+```
+```{r}
+filter(litters_df, gd_of_birth != 20)  #same as before
+```
+
+```{r}
+filter(litters_df, gd0_weight >= 22, gd_of_birth == 20)
+```
+```{r}
+filter(litters_df, group == 'Mod8')
+```
+
+```{r}
+filter(litters_df, group %in% c('Con7', 'Mod8'))
+```
 
