--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -104,7 +104,15 @@ mutate(
   group = str_to_lower(group))
 ```
 
+## 'arrange'
 
+```{r}
+arrange(litters_df, pups_born_alive)
+```
+
+```{r}
+arrange(litters_df, pups_born_alive, gd0_weight)
+```
 
 
 
