--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -10,7 +10,7 @@ library(tidyverse)
 ## Load in the FAS Litters data
 
 ```{r}
-litters_df = read.csv('./data/FAS_litters.csv')
+litters_df = read_csv('./data/FAS_litters.csv')
 litters_df = janitor:: clean_names(litters_df)
 ```
 
@@ -117,7 +117,27 @@ arrange(litters_df, pups_born_alive, gd0_weight)
 
 
 
+## '%>%' and then  (shift command m)
 
+```{r}
+litters_data_raw = read_csv('./data/FAS_litters.csv')
+litters_clean_name = janitor:: clean_names(litters_data_raw)
+litters_data_selected = select(litters_clean_name, -pups_survive)
+litters_mutated = mutate(litters_data_selected, wt_gain = gd18_weight - gd0_weight)
+litters_without_missing = drop_na(litters_mutated, gd0_weight)
+
+```
+
+Use the pipe operator instead
+
+```{r}
+litters_df = 
+  read_csv('./data/FAS_litters.csv') %>% 
+  janitor:: clean_names() %>% 
+  select(-pups_survive) %>% 
+  mutate(wt_gain = gd18_weight - gd0_weight) %>% 
+  drop_na(gd0_weight)
+```
 
 
 
